--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <!-- choose us section -->
 
   <section id="choose-us">
-    <div class="choose-us-image">
+    <div class="section-ms-img choose-us-image">
       <img src="https://i.postimg.cc/3x7SfK4B/pexels-sewupari-studio-11527866-modified.png" alt="subtoget"
         width="300px">
     </div>
@@ -129,7 +129,7 @@
 
   <!-- AGENT SECTION -->
   <section id="agent">
-    <div class="agent-image">
+    <div class="section-ms-img agent-image">
       <img src="https://i.postimg.cc/x14mJ52z/pexels-rodnae-productions-7821936-modified.png" alt="subtoget"
         width="300px">
     </div>
@@ -208,7 +208,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div>
-            <img class="test-images" src="https://i.postimg.cc/05KKFD7k/pexels-tam-hoang-1007066-modified.png"
+            <img class="section-ms-img test-images" src="https://i.postimg.cc/05KKFD7k/pexels-tam-hoang-1007066-modified.png"
               alt="subtoget" width="300px">
           </div>
 
@@ -222,7 +222,7 @@
 
         <div class="carousel-item">
           <div>
-            <img class="test-images" src="https://i.postimg.cc/NFjT2z5R/pexels-anastasiya-gepp-1462630-modified.png"
+            <img class="section-ms-img test-images" src="https://i.postimg.cc/NFjT2z5R/pexels-anastasiya-gepp-1462630-modified.png"
               alt="subtoget" width="300px">
           </div>
 
@@ -236,7 +236,7 @@
 
         <div class="carousel-item">
           <div>
-            <img class="test-images"
+            <img class="section-ms-img test-images"
               src="https://i.postimg.cc/T36br1LR/pexels-george-dolgikh-giftpunditscom-1326946-modified.png"
               alt="subtoget" width="300px">
           </div>
