--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Henry Sokei">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon (1).ico">
   <title>SubtoGet</title>
   <!--google font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
