--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="A TECHNOLOGY PLATFORMTHAT OFFERS YOU DIGITAL NEEDS WITHOUT COMPROMISING THE QUALITY">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="Henry Sokei">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon (1).ico">
   <title>SubtoGet</title>
   <!--google font-->
